<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label">Reminder</string>
    <string name="edit">Edit</string>
    <string name="events">Events</string>
    <string name="app_name">Ring Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="full">full!</string>
    <string name="emptylistnote">Nothing to see yet!</string>
    <string name="empty">Empty</string>
    <string name="schedule">Schedule new change</string>
    <string name="added">Added!</string>
    <string name="button_next">Next</string>

    <!--days of the week-->
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednsday">W</string>
    <string name="thurday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>

    <!--activity titles-->
    <string name="title_activity_no_events">NoEventsActivity</string>
    <string name="title_activity_event_list">EventListActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_advert">About</string>
    <string name="title_activity_loader">Loader</string>
    <string name="title_activity_empty_list">Empty</string>
    <string name="title_activity_create_new">Create</string>

    <!--sectional titles-->
    <string name="minutes">minutes</string>
    <string name="duration">DURATION</string>
    <string name="title_repeats">REPEATS</string>
    <string name="nav_title">Navigation</string>
    <string name="time">TIME</string>
    <string name="days">DAYS</string>
    <string name="ringer">Ringer</string>
    <string name="ringer_mode">RINGER MODE</string>
    <string name="event_name">DESCRIPTIVE NAME</string>
    <string name="delete_action">Removing</string>

    <string name="duration_lc">Duration</string>
    <string name="duration_lc_with_min">Duration (Min)</string>
    <string name="event_name_lc">Name</string>
    <string name="time_lc">Time</string>

    <!--actions-->
    <string name="create_new_event">Create new event</string>
    <string name="next">Next</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="createnew">Create new</string>
    <string name="clear">clear</string>
    <string name="contact_support">Contact Support</string>
    <string name="email_dev">Send email to developer...</string>

    <!--informational text-->
    <string name="no_events">No saved events</string>
    <string name="please_wait">Please wait...</string>


    <!--errors-->
    <string name="invalid_event">Invalid event, going back to main event list.</string>
    <string name="title_activity_create_new_event">CreateNewEventActivity</string>
    <string name="empty_event_name">Event name cannot be empty.</string>
    <string name="empty_event_duration">Event duration cannot be empty</string>
    <string name="internal_error">Internal error occurred</string>
    <string name="invalid_duration">Invalid duration</string>
    <string name="duration_cannot_be_zero">Duration cannot be less than 1</string>

    <!--ringer options-->
    <string name="mute_ringer_type">Mute</string>
    <string name="vibrate_ringer_type">Vibrate</string>
    <string name="normal_ringer_type">Normal</string>

    <!--edit text hints-->
    <string name="event_name_hint">Event name</string>

    <!--other-->
    <string name="about">
        Version:  %1$s \n\n
        Codename: %2$s \n\n
    </string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="app_name_switch">Switch</string>
    <string name="app_name_ringer">Ringer</string>

    <!--ad stuff-->
    <string name="fullpage_ad_unit_id">ca-app-pub-7086122157123928/2224626571</string>
    <string name="banner_ad_unit_id">ca-app-pub-394025609994544/6300978111</string>

    <string name="meetings">Meetings</string>
    <string name="meetings_expanded">It\'s time you stopped being a dick in meetings.\n %s helps by changing your phone\'s ringer mode for you!</string>

    <string name="murdered">Nightcrawlers</string>
    <string name="murdered_expanded">Stop your phone from ringing at night.\nThat comes in handy if you don\'t want to get murdered by a criminal.</string>

    <string name="ocd">OCD</string>
    <string name="ocd_expanded">Feel like your phone is not going to ring? Make sure it rings by scheduling a ringer mode change for a specific time.</string>

    <string name="toast_crash">Something wrong just happened.</string>
    <string name="this_is_about">This is about %s</string>
    <string name="product_tour">Product tour</string>

    <string name="about_qoute">"It is a wise thing to be polite; consequently, it is a stupid thing to be rude"\n -A. Schopenhauer</string>
    <string name="changed_ringer">Changed the ringer mode</string>
    <string name="ringer_is_now">Changed ringer mode to %1$s</string>
    <string name="ok">OK</string>
    <string name="now">Now</string>
    <string name="settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example settings for Data & Sync -->

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_dialog_dismiss">Dialog dismiss time</string>
    <string-array name="pref_title_dialog_dismiss_titles">
        <item>15 seconds</item>
        <item>30 second</item>
        <item>1 minute</item>
        <item>3 minutes</item>
        <item>6 minutes</item>
    </string-array>
    <string-array name="pref_notif_dialog_time_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
    </string-array>

    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_about">Credits</string>
    <string name="pref_header_def_ringermode">Ringer</string>

    <string name="pref_summary_def_ringermode">Default ringer mode for events</string>
    <string name="pref_summary_def_notifications">Configure application dialogs</string>
    <string name="pref_summary_def_data_sync">Synchronize application with local calendar</string>
</resources>
