<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="adeebnqo.Independent.switchringer.activity.CreateNew">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/time"
        android:id="@+id/textview_time"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/days"
        android:id="@+id/textview_days"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/timePicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_days"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/monday"
                android:layout_height="fill_parent"
                android:textOff="@string/monday"
                android:textOn="@string/monday"
                android:layout_weight=".3"
                android:layout_width="fill_parent"
                android:background="@drawable/createnew_daybutton"
                />

            <ToggleButton
                android:id="@+id/tuesday"
                android:layout_height="fill_parent"
                android:textOn="@string/tuesday"
                android:textOff="@string/tuesday"
                android:layout_weight=".3"
                android:layout_width="fill_parent"
                android:background="@drawable/createnew_daybutton"/>

            <ToggleButton
                android:id="@+id/wednsday"
                android:layout_height="wrap_content"
                android:textOff="@string/wednsday"
                android:textOn="@string/wednsday"
                android:layout_weight=".3"
                android:layout_width="fill_parent"
                android:background="@drawable/createnew_daybutton"/>

            <ToggleButton
                android:id="@+id/thurday"
                android:layout_height="fill_parent"
                android:textOn="@string/thurday"
                android:textOff="@string/thurday"
                android:layout_weight=".3"
                android:layout_width="fill_parent"
                android:background="@drawable/createnew_daybutton"/>

            <ToggleButton
                android:id="@+id/friday"
                android:layout_height="fill_parent"
                android:textOn="@string/friday"
                android:textOff="@string/friday"
                android:layout_weight=".3"
                android:layout_width="fill_parent"
                android:background="@drawable/createnew_daybutton"/>
            <ToggleButton
                android:id="@+id/saturday"
                android:layout_height="fill_parent"
                android:textOn="@string/saturday"
                android:textOff="@string/saturday"
                android:layout_weight=".3"
                android:layout_width="fill_parent"
                android:background="@drawable/createnew_daybutton"/>

            <ToggleButton
                android:id="@+id/sunday"
                android:layout_height="fill_parent"
                android:textOn="@string/sunday"
                android:textOff="@string/sunday"
                android:layout_weight=".3"
                android:layout_width="fill_parent"
                android:background="@drawable/createnew_daybutton"/>
        </LinearLayout>

    </TableRow>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tableRow5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/view2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ringer"
        android:id="@+id/textview_ringer"
        android:layout_below="@+id/view2"
        android:layout_alignLeft="@+id/textview_days"
        android:layout_alignStart="@+id/textview_days"
        android:layout_marginTop="5dp" />

    <TableRow
        android:id="@+id/ringerTypes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_ringer"
        android:layout_alignLeft="@+id/textview_ringer"
        android:layout_alignStart="@+id/textview_ringer">

        <RadioGroup
            android:id="@+id/radio_ringer"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_ringer_type"
                android:id="@+id/normal_ringer"
                android:layout_below="@+id/adView"
                android:layout_alignLeft="@+id/textview_days"
                android:layout_alignStart="@+id/textview_days"
                android:layout_weight="1"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibrate_ringer_type"
                android:id="@+id/vibrate_ringer"
                android:layout_below="@+id/adView"
                android:layout_alignLeft="@+id/textview_days"
                android:layout_alignStart="@+id/textview_days"
                android:layout_weight="1"
                android:textSize="12sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mute_ringer_type"
                android:id="@+id/silent_ringer"
                android:layout_below="@+id/adView"
                android:layout_alignLeft="@+id/textview_days"
                android:layout_alignStart="@+id/textview_days"
                android:layout_weight="1"
                android:textSize="12sp" />
        </RadioGroup>
    </TableRow>

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:layout_alignTop="@+id/textview_time"
        android:layout_alignRight="@+id/ringerTypes"
        android:layout_alignEnd="@+id/ringerTypes" />

</RelativeLayout>