<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/details"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/time"
                android:textColor="@color/accent"
                android:id="@+id/label_time" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ic_time"
                android:src="@drawable/ic_alarm_clock_small"
                android:layout_marginRight="16dp"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textSize="50dp"
            android:textColor="@color/secondary_text"
            android:id="@+id/val_time" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="16dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/duration"
                android:textColor="@color/accent"
                android:id="@+id/label_duration" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                android:textSize="11dp"
                android:id="@+id/duration_units"
                android:layout_marginLeft="10dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ic_duration"
                android:src="@drawable/timer_sand"
                android:layout_marginRight="16dp"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Large Text"
            android:textSize="50dp"
            android:textColor="@color/secondary_text"
            android:id="@+id/val_duration" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="16dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/title_repeats"
                android:textColor="@color/accent"
                android:id="@+id/label_days" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ic_days"
                android:src="@drawable/repeat"
                android:visibility="gone"
                android:layout_marginRight="16dp"/>

        </LinearLayout>


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:layout_below="@+id/title_repeats"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="16dp">

            <ToggleButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:textColor="@color/icons"
                android:id="@+id/button_sunday"
                android:background="@drawable/cube_button"
                android:layout_weight="1"
                android:textOff="@string/sunday"
                android:textOn="@string/sunday" />

            <ToggleButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:textColor="@color/icons"
                android:id="@+id/button_monday"
                android:background="@drawable/cube_button"
                android:layout_weight="1"
                android:textOff="@string/monday"
                android:textOn="@string/monday"/>

            <ToggleButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:id="@+id/button_tuesday"
                android:textColor="@color/icons"
                android:background="@drawable/cube_button"
                android:layout_weight="1"
                android:textOn="@string/tuesday"
                android:textOff="@string/tuesday"/>

            <ToggleButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/icons"
                android:text="@string/wednsday"
                android:id="@+id/button_wednesday"
                android:background="@drawable/cube_button"
                android:layout_weight="1"
                android:textOn="@string/wednsday"
                android:textOff="@string/wednsday"/>

            <ToggleButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/thurday"
                android:textColor="@color/icons"
                android:id="@+id/button_thursday"
                android:background="@drawable/cube_button"
                android:layout_weight="1"
                android:textOn="@string/thurday"
                android:textOff="@string/thurday" />

            <ToggleButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textColor="@color/icons"
                android:id="@+id/button_friday"
                android:background="@drawable/cube_button"
                android:layout_weight="1"
                android:textOn="@string/friday"
                android:textOff="@string/friday"/>

            <ToggleButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/icons"
                android:text="@string/saturday"
                android:id="@+id/button_saturday"
                android:background="@drawable/cube_button"
                android:layout_weight="1"
                android:textOn="@string/saturday"
                android:textOff="@string/saturday"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>