<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/nav_buttons"
        android:layout_gravity="bottom"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/include"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/include">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_marginTop="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:hint="@string/duration_lc_with_min"
                android:textColorHint="@color/secondary_text"
                android:backgroundTint="@color/primary" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radioGroup"
                android:layout_marginTop="39dp"
                android:layout_below="@+id/textView3"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignStart="@+id/textView3">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vibrate_ringer_type"
                    android:id="@+id/vibrate_choice"
                    android:textColor="@color/secondary_text"
                    android:backgroundTint="@color/primary"
                    android:buttonTint="@color/primary" />

                <RadioButton
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mute_ringer_type"
                    android:id="@+id/mute_choice"
                    android:textColor="@color/secondary_text"
                    android:backgroundTint="@color/primary"
                    android:buttonTint="@color/primary" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normal_ringer_type"
                    android:id="@+id/normal_choice"
                    android:textColor="@color/secondary_text"
                    android:backgroundTint="@color/primary"
                    android:buttonTint="@color/primary" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ringer_mode"
                android:id="@+id/textView3"
                android:layout_marginTop="65dp"
                android:layout_below="@+id/editText2"
                android:layout_alignLeft="@+id/editText2"
                android:layout_alignStart="@+id/editText2"
                android:textColor="@color/accent"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/radioGroup"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
