<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@color/primary">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/now"
            android:id="@+id/now"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="@dimen/_16sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="This is a title"
            android:id="@+id/alertTitle"
            android:textColor="@color/primary_text"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_below="@+id/now"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/clockView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:backgroundTint="@color/accent"
        android:layout_weight="1"
        android:layout_centerInParent="true"
        android:layout_gravity="fill_vertical|center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_light"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/margin_small"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/snooze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/ok" />

        <Button
            android:id="@+id/dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/cancel" />

    </LinearLayout>

</RelativeLayout>